[project]
name = "qat-compiler"
# This name has the -compiler suffix in order to use the poetry and twine tools to build and publish to PyPI
# witout having to manually adjust the dist file names.
description = "A low-level quantum compiler and runtime which facilitates executing quantum IRs."
readme = "README.rst"
license = "BSD-3-Clause"
requires-python = ">=3.10,<3.13"
dynamic = ["dependencies", "version"]
authors = [
  { name = "Hamid El Maazouz", email = "helmaazouz@oqc.tech" },
  { name = "Harry Waring", email = "hwaring@oqc.tech" },
  { name = "Jamie Friel", email = "jfriel@oqc.tech" },
  { name = "John Dumbell", email = "jdumbell@oqc.tech" },
  { name = "Kajsa Eriksson Rosenqvist", email = "keriksson.rosenqvist@oqc.tech" },
  { name = "Owen Arnold", email = "oarnold@oqc.tech" },
  { name = "Benjamin Sach", email = "bsach@oqc.tech" },
  { name = "Daria Van Hende", email = "dvanhende@oqc.tech" },
  { name = "Luke Causer", email = "lcauser@oqc.tech" },
  { name = "Russell Rundle", email = "rrundle@oqc.tech" },
]

[project.urls]
repository = "https://github.com/oqc-community/qat"
documentation = "https://oqc-community.github.io/qat/main/index.html"
homepage = "https://oqc.tech/"

[tool.poetry]
requires-poetry = ">=2.0"
packages = [{ include = "qat", from = "src/" }]
version = "0.0.0"

[tool.poetry.scripts]
format-code = "scripts.poetry_scripts:format_code"
generate-report = "scripts.ci.generate_report:main"
jupytext-sync = "scripts.poetry_scripts:jupytext_sync"
build-docs = "scripts.poetry_scripts:build_docs"

[tool.poetry.dependencies]
numpy = ">=1.26.4"
networkx = ">=2.5"
matplotlib = "^3.7.5"
logging-config = "^1.0.4"
qutip = ">=5.2.0"
toml = "^0.10.2"
openqasm3 = { version = "^1.0.0", extras = ["parser"] }
pytket = "^1.41.0"
qiskit = ">=1.4.2,<3.0.0"
qiskit-aer = "^0.17.1"
qiskit-experiments = "^0.11.0"
scipy = ">=1.15.2"
pyqir = ">=0.11.0,!=0.12.0,!=0.12.1,!=0.12.2,<0.13.0"
regex = ">=3.6.1"
jsonpickle = ">=4.0.5"
qblox-instruments = ">=1.0.0,<2.0.0"
lark = "^1.3.1"
pydantic = "2.11.7"
pydantic-settings = ">=2.5.2"
compiler-config = "^0.2.0"
pydantic-extra-types = "^2.10.4"
numpydantic = ">=1.6.7"
semver = "^3.0.2"
frozendict = "^2.4.6"
piny = { version = "^1.1.0" }
more-itertools = "^10.7.0"
sympy = "^1.14.0"

[tool.poetry.group.dev.dependencies]
pip-audit = "^2.9.0"
coverage = "~7.9.1"
pytest = "~8.3.5"
pytest-cov = ">=6.2.1"
pytest-mock = "^3.14.0"
pytest-xdist = { version = "^3.8.0", extras = ["psutil"] }
docplex = "^2.21.207"
pre-commit = "^4.2.0"
pytest-benchmark = "^4.0.0"
jinja2 = "^3.1.5"
jupytext = "^1.17.2"
nbmake = "^1.5.5"
nbstripout = "^0.8.1"
ruff = "^0.12.4"
pip-licenses = "^5.0.0"

[tool.poetry.group.licenses]
optional = true

[tool.poetry.group.licenses.dependencies]
pip-licenses = "^5.0.0"

[tool.poetry.group.release]
optional = true

[tool.poetry.group.release.dependencies]
twine = "^6.1.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^8.0.0"
sphinx-rtd-theme = { version = "^3.0.0" }
sphinx-autodoc-typehints = "^3.0.0"
sphinx-paramlinks = "^0.6.0"
sphinx-multiversion = "^0.2.4"
sphinx-pyproject = "^0.3.0"
dunamai = "^1.24.1"
myst-nb = "^1.3.0"

[tool.poetry.group.notebook]
optional = true

[tool.poetry.group.notebook.dependencies]
notebook = "^7.4.1"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }

[tool.poetry-dynamic-versioning]
enable = true
pattern = "default-unprefixed"
vcs = "git"
metadata = false
dirty = false
style = "pep440"
format-jinja = """
    {%- if distance == 0 -%}
        {{ serialize_pep440(base) }}
    {%- else -%}
        {{ serialize_pep440(base, post=distance, dev=timestamp) }}
    {%- endif -%}
"""

[build-system]
requires = ["poetry-core>=2.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.sphinx-pyproject]
copyright = "2025, Oxford Quantum Circuits Ltd"
add_module_names = false
autoclass_content = "both"
extensions = [
  "sphinx_multiversion",
  "sphinx_rtd_theme",
  "sphinx.ext.autodoc",
  "sphinx_autodoc_typehints",
  "sphinx_paramlinks",
  "sphinx.ext.graphviz",
  "myst_nb",
]
templates_path = ["_templates"]
html_theme = "sphinx_rtd_theme"
html_static_path = ["_static"]
html_logo = "qat-logo.png"
html_theme_options.logo_only = false
html_theme_options.prev_next_buttons_location = "bottom"
html_theme_options.style_external_links = false
html_theme_options.vcs_pageview_mode = ""
html_theme_options.collapse_navigation = false
html_theme_options.sticky_navigation = true
html_theme_options.navigation_depth = 6
html_theme_options.includehidden = true
html_theme_options.titles_only = false

[tool.ruff]
# Explicit set of rules for linting and formatting
line-length = 92
extend-exclude = ["benchmarks/**"]

[tool.ruff.lint]
# Enable specific rule sets (see https://docs.astral.sh/ruff/rules/)
extend-select = [
  "B",   # flake8-bugbear
  "BLE", # blind-except
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "N",   # pep8-naming
  "PT",  # pytest-style
  "RSE", # flake8-raise
  "S",   # bandit
  "TRY", # tryceratops
  "W",   # pycodestyle warnings
  #  "PL",   # pylint
  #  "C4",   # flake8-comprehensions
  #  "SIM",  # flake8-simplify
  #  "TID",  # flake8-tidy-imports
  #  "A",    # flake8-builtins
  #  "RUF",  # Ruff-specific rules
  #  "UP",   # pyupgrade
]

# Ignore specific rules (add or remove as needed)
ignore = [
  # B codes TODO: COMPILER-1071
  "B006", # Do not use mutable data structures for argument defaults
  "B007", # Loop control variable not used within loop body
  "B008", # Do not perform function call in argument default
  "B010", # Do not call setattr with constant attribute value
  "B011", # Do not assert False
  "B015", # Pointless comparison
  "B018", # Useless attribute access
  "B020", # Loop control variable overrides iterable it iterates
  "B023", # Function definition does not bind loop variable
  "B024", # Abstract base class without abstract methods or properties
  "B026", # *arg unpacking after a kwarg
  "B027", # Empty method in an abstract base class without abstract decorator
  "B028", # No explicit stacklevel in warning
  "B905", # `zip()` without an explicit `strict=` parameter
  # E codes TODO: COMPILER-1069
  "E501", # Line too long (handled by ruff format as best we can with line-length=92)
  # N codes
  "N801", # Class name should use CapWords convention
  "N802", # Function name should be lowercase
  "N803", # Argument name should be lowercase
  "N805", # TODO: First argument of a method should be named 'self' There are real errors revealed by this
  "N806", # Variable in function should be lowercase
  "N812", # Lowercase variable in function should be lowercase
  "N815", # Variable in function should be lowercase
  # PLR codes
  "PLR2004", # Magic value used in comparison
  "PLR0912", # Too many branches in function
  "PLR0913", # Too many arguments in function definition
  # PT codes TODO: COMPILER-1078
  "PT001", # Redundant parenthesis
  "PT003", # `scope='function'` is implied
  "PT006", # Wrong type passed to first argument of parametrize
  "PT007", # Wrong type in parametrize
  "PT012", # pytest.raises block should contain a single simple statement
  "PT014", # Duplicate test case in parametrize
  "PT015", # assert False (B011?)
  "PT018", # Assertion should be broken down into multiple parts
  "PT022", # No teardown in fixture, use return instead of yield
  "PT028", # Test function parameter has default argument
  "PT030", # pytest.warns without match
  "PT031", # pytest.warns block should contain a single simple statement
  # S codes TODO: COMPILER-1079
  "S101", # Assert??
  "S301", # Pickle is unsafe
  "S307", # Use of possibly unsafe eval
  "S311", # Pseudo random in cryptographic call
  "S324", # Probable use of insecure hash function
  "S701", # Jinja2 autoescape
  # TRY codes TODO: COMPILER-1080
  "TRY003", # Avoid specifying long messages outside exception class
  "TRY004", # Prefer TypeError exception for invalid type
  "TRY201", # raise without specifying exception name
  "TRY300", # Consider else block
]

[tool.ruff.lint.per-file-ignores]
# Ignore exception issues in legacy code and tests
"src/qat/purr/**" = ["B904", "BLE001", "RSE102", "S110", "S112", "TRY002"]
"tests/unit/purr/**" = [
  "BLE001",
  "B017",
  "B904",
  "PT010",
  "PT011",
  "PT017",
  "S110",
  "S112",
]
# Ignore imports not at top of notebook files
"notebooks/**" = ["E402"]
# Ignore issues in scripts and tools
# TODO: COMPILER-1079
"scripts/**" = ["S314", "S605", "S607"]
"tools/partial_package_builder.py" = ["S607"]

[tool.ruff.lint.isort]
known-first-party = ["qat"]
known-local-folder = ["tests", "benchmarks"]
combine-as-imports = true
split-on-trailing-comma = false

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib", "--doctest-modules"]
testpaths = ['src', 'tests']
filterwarnings = [
  # Set warnings to raise errors in pytest runs.
  "error",
  # Specific warnings can be set to be handled differently if needed,
  # E.g.:
  # "default::DeprecationWarning", to show Deprecation Warnings
  # "ignore:::qutip", to ignore warnings raised from the qutip package
  # see more options: https://docs.pytest.org/en/7.1.x/how-to/capture-warnings.html
  #
  # Temporary default for pre-existing issues. Tickets exist for addressing these:
  # Lark using deprecated version on sre_parse and sre_constants
  'default:.*sre_[parse|constants]:DeprecationWarning:lark.utils',
  # The GlobalisePhasedX pass is unreliable and deprecated. Ticket added to resolve
  'default:.*GlobalisePhasedX:DeprecationWarning',
  # TODO: Change to passive_reset_time. 428, 455
  'default:.*to modify the reset time of qubits to their ground state:UserWarning:',
  # TODO - `qblox-instruments` to fix deprecation warnings regarding QCodes
  'default::qcodes.utils.deprecate.QCoDeSDeprecationWarning:',
  # TODO - remove when purr is dropped COMPILER-844
  'default:DOWN_CONVERT PostProcessing is deprecated:DeprecationWarning',
  'default:WaveformV1 support is deprecated:DeprecationWarning:qat.*.purr',
  # TODO - remove when ConvertIR pass is removed COMPILER-1000
  'default:ConvertToPydanticIR is deprecated:DeprecationWarning',
  # TODO - remove for next version of TargetData COMPILER-966
  'default:`.*TargetData.instruction_memory_size` is deprecated:DeprecationWarning:qat.middleend.passes.purr.validation',
]
markers = ["ab_test", "experimental", "legacy", "qblox"]

# The syncing rules are dispatched in the order defined here; if in the docs sub-directory,
# it will sync to the docs source, else it will not.
[[tool.jupytext.formats]]
"notebooks/ipynb/tutorials" = "ipynb"
"notebooks/scripts/tutorials" = "py:percent"
"docs/source/tutorials" = "ipynb"            # These will automatically appear in docs

[[tool.jupytext.formats]]
"notebooks/ipynb/docs" = "ipynb"
"notebooks/scripts/docs" = "py:percent"
"docs/source/notebooks" = "ipynb"       # These will be available to use in the docs by reference

[[tool.jupytext.formats]]
"notebooks/ipynb" = "ipynb"
"notebooks/scripts" = "py:percent"

[tool.jupytext]
notebook_metadata_filter = "-kernelspec"
