[tool.poetry]
name = "qat-compiler-minimal"
version = "1.0.0"
description = "A minimal version of the `qat-compiler` package."
readme = "README.rst"
authors = [
    "Hamid El Maazouz <helmaazouz@oxfordquantumcircuits.com>",
    "Harry Waring <hwaring@oxfordquantumcircuits.com>",
    "Jamie Friel <jfriel@oxfordquantumcircuits.com>",
    "John Dumbell <jdumbell@oxfordquantumcircuits.com>",
    "Kajsa Eriksson Rosenqvist <keriksson.rosenqvist@oxfordquantumcircuits.com>",
    "Norbert Deak <ndeak@oxfordquantumcircuits.com>",
    "Owen Arnold <oarnold@oxfordquantumcircuits.com>",
]
packages = [{include = "qat", from = "src/QAT"}]
package_includes = [
    "qat/purr/compiler/config.py",
    "qat/purr/utils/serializer.py",
]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
